--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fontsource-roboto": "^3.0.3",
     "history": "^4.10.1",
     "lodash": "^4.17.0",
+    "notistack": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
