--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "practice",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://pi4alb.github.io/vDolgah_webApp",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -11,6 +12,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "fontsource-roboto": "^3.0.3",
+    "gh-pages": "^3.1.0",
     "history": "^4.10.1",
     "lodash": "^4.17.0",
     "notistack": "^1.0.0",
@@ -18,13 +20,16 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "recharts": "^1.8.5",
     "store": "^2.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
